--- a/ProjectDiamondShop/Views/ViewProfile/EditProfile.cshtml
+++ b/ProjectDiamondShop/Views/ViewProfile/EditProfile.cshtml
@@ -101,6 +101,8 @@
             border-radius: 10px;
             background-color: skyblue;
             color: #333;
+            position: relative;
+            z-index: 1;
         }
 
         .col-xs-11 {
@@ -131,6 +133,11 @@
 
         .spacer {
             height: 120px;
+        }
+        .footer-pos {
+            position: absolute;
+            bottom: 0;
+            width: 100%;
         }
     </style>
 </head>
