--- a/ProjectDiamondShop/Views/DeliveryStaff/DeliveryStaff.cshtml
+++ b/ProjectDiamondShop/Views/DeliveryStaff/DeliveryStaff.cshtml
@@ -4,7 +4,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
-    <title>Sale Staff Orders</title>
+    <title>Delivery Staff Orders</title>
     <link rel="stylesheet" href="/Content/bootstrap.min.css" />
     <style>
         .container {
@@ -25,7 +25,7 @@
 </head>
 <body>
     <div class="container">
-        <h2>Sale Staff Orders</h2>
+        <h2>Delivery Staff Orders</h2>
         <table>
             <thead>
                 <tr>
@@ -47,12 +47,7 @@
                         <td>@order.TotalMoney</td>
                         <td>@order.Status</td>
                         <td>
-                            <form action="@Url.Action("Process", "SaleStaff")" method="post" style="display:inline;">
-                                @Html.AntiForgeryToken()
-                                <input type="hidden" name="orderId" value="@order.OrderID" />
-                                <button type="submit" class="btn btn-warning">Process</button>
-                            </form>
-                            <a href="@Url.Action("ViewOrder", "SaleStaff", new { orderId = order.OrderID })" class="btn btn-info">View Order</a>
+                            <a href="@Url.Action("UpdateOrderStatus", "DeliveryStaff", new { orderId = order.OrderID })" class="btn btn-info">Update Status</a>
                         </td>
                     </tr>
                 }
