DoneCart-Done Order

--- a/ProjectDiamondShop/Views/Diamonds/Diamonds.cshtml
+++ b/ProjectDiamondShop/Views/Diamonds/Diamonds.cshtml
@@ -2,7 +2,6 @@
 @{
     ViewBag.Title = "Diamonds";
     Layout = "~/Views/Shared/_LayoutPage1.cshtml";
-
 }
 <style>
     select {
@@ -12,6 +11,11 @@
         select option {
             padding: 5px;
         }
+
+    .sut {
+        display: flex;
+        justify-content: center;
+    }
 </style>
 <link href="~/Content/ProductCss/style.css" rel="stylesheet" />
 <link href="~/Content/ProductCss/bootstrap.min.css" rel="stylesheet" />
@@ -19,31 +23,31 @@
 <link href="~/Content/ProductCss/animate.css" rel="stylesheet" />
 <link href="~/Content/ProductCss/linearicons.css" rel="stylesheet" />
 <link href="~/Content/ProductCss/SliderMaxMin.css" rel="stylesheet" />
+
 @{
     // Danh sách clarity
     List<string> clarities = new List<string>() { "IF", "VVS1", "VVS2", "VS1", "VS2", "SI1", "SI2", "SI3", "I1", "I2", "I3" };
 
     // Danh sách cut
-    List<string> cuts = new List<string>() { "Excellent", "Very Good", "Good", "Fair", "Poor", "Ideal"};
+    List<string> cuts = new List<string>() { "Excellent", "Very Good", "Good", "Fair", "Poor", "Ideal" };
 
     // Danh sách color
     List<string> colors = new List<string>() { "D", "E", "F", "G", "H", "I", "J", "K", "L", "M", "N", "O", "P", "Q", "R", "S", "T", "U", "V", "W", "X", "Y", "Z" };
-    // Danh sách shapes
-    List<string> shapes = new List<string>(){"Round", "Princess", "Cushion", "Emerald", "Oval", "Radiant", "Asscher", "Marquise", "Heart", "Pear"}
-;
 
+    // Danh sách shapes
+    List<string> shapes = new List<string>() { "Round", "Princess", "Cushion", "Emerald", "Oval", "Radiant", "Asscher", "Marquise", "Heart", "Pear" };
 }
 
 <div class="container center-block" style="margin-top:50px;">
     @using (Html.BeginForm("Fillter", "Diamonds", FormMethod.Post))
     {
         @Html.AntiForgeryToken()
-        <div class="form-group col-lg-4" >
-            <label for="SearchTerm">Search Term:</label>    
-            <input type="text" id="SearchTerm" name="SearchTerm" value="@ViewBag.SearchTerm" class="form-control"/>
+        <div class="form-group col-lg-12">
+            <label for="SearchTerm">Search Term:</label>
+            <input type="text" id="SearchTerm" name="SearchTerm" value="@ViewBag.SearchTerm" class="form-control" />
         </div>
-        //Clarity
-        <div class="form-group col-lg-4">
+        <!-- Clarity -->
+        <div class="form-group col-lg-6">
             <label for="Clarity">Clarity:</label>
             <select id="Clarity" name="Clarity" class="form-control">
                 <option value="">-- All --</option>
@@ -51,11 +55,10 @@
                 {
                     <option value="@clarity" @(clarity == ViewBag.SelectedClarity ? "selected" : "")>@clarity</option>
                 }
-
             </select>
         </div>
-        // Cut
-        <div class="form-group col-lg-4">
+        <!-- Cut -->
+        <div class="form-group col-lg-6">
             <label for="Cut">Cut:</label>
             <select id="Cut" name="Cut" class="form-control">
                 <option value="">-- All --</option>
@@ -63,40 +66,32 @@
                 {
                     <option value="@cut" @(cut == ViewBag.SelectedCut ? "selected" : "")>@cut</option>
                 }
-
-
             </select>
         </div>
-        //Color
-        <div class="form-group col-lg-4">
+        <!-- Color -->
+        <div class="form-group col-lg-6">
             <label for="Color">Color:</label>
             <select id="Color" name="Color" class="form-control">
                 <option value="">-- All --</option>
-                
                 @foreach (var color in colors)
                 {
                     <option value="@color" @(color == ViewBag.SelectedColor ? "selected" : "")>@color</option>
                 }
-
-
             </select>
         </div>
-        //Shape
-        <div class="form-group" class="col-lg-4">
+        <!-- Shape -->
+        <div class="form-group Shape col-lg-6">
             <label for="Shape">Shape:</label>
             <select id="Shape" name="Shape" class="form-control">
                 <option value="">-- All --</option>
                 @foreach (var shape in shapes)
                 {
-                    
                     <option value="@shape" @(shape == ViewBag.SelectedShape ? "selected" : "")>@shape</option>
                 }
-
-
             </select>
         </div>
-        //Price
-        <div id="PriceDiv" class="col-lg-4"> 
+        <!-- Price -->
+        <div id="PriceDiv" class="col-lg-6">
             <div class="range_container">
                 <div class="sliders_control">
                     <input id="fromSlider" type="range" value="@ViewBag.minPrice" min="1" max="99999" step="1" />
@@ -114,8 +109,8 @@
                 </div>
             </div>
         </div>
-        //Carat Weight
-        <div id="CaratDiv" class="col-lg-4">
+        <!-- Carat Weight -->
+        <div id="CaratDiv" class="col-lg-6">
             <div class="range_container">
                 <div class="sliders_control">
                     <input id="fromSlider" type="range" value="@ViewBag.minCaratWeight" min="0.5" max="5" step="0.01" />
@@ -134,9 +129,10 @@
             </div>
         </div>
         <button type="submit">Filter</button>
-        @*<button type="reset">Reset</button>*@ //nếu muốn để reset button cần phải làm js để cài lại giá trị range để nó ko bị lỗi hình ảnh 
+        @*<button type="reset">Reset</button>*@ <!-- nếu muốn để reset button cần phải làm js để cài lại giá trị range để nó ko bị lỗi hình ảnh -->
     }
 </div>
+
 <section id="new-arrivals" class="new-arrivals">
     <div class="container">
         <div class="new-arrivals-content">
@@ -147,31 +143,29 @@
                     <div class="col-md-3 col-sm-4">
                         <div class="single-new-arrival">
                             <div class="single-new-arrival-bg">
-                                <img src="@imagepart[0]" alt="new-arrivals images" style="width:100% ">
+                                <img src="@imagepart[0]" alt="new-arrivals images" style="width:100%">
                                 <div class="single-new-arrival-bg-overlay"></div>
-                                @*<div class="sale bg-1">
-                                        <p>sale</p>
-                                    </div>*@
                                 <div class="new-arrival-cart">
-                                    <p>
-                                        <span class="lnr lnr-cart"></span>
-                                        <a href="#">add <span>to </span> cart</a>
-                                    </p>
-                                    <p class="arrival-review pull-right">
-                                        <span class="lnr lnr-heart"></span>
-                                        <span class="lnr lnr-frame-expand"></span>
-                                    </p>
+                                    @using (Html.BeginForm("AddToCart", "Cart", FormMethod.Post))
+                                    {
+                                        @Html.Hidden("diamondID", item.diamondID)
+                                        @Html.Hidden("diamondName", item.diamondName)
+                                        @Html.Hidden("diamondPrice", item.diamondPrice)
+                                        <input type="submit" value="Add to Cart" />
+                                    }
                                 </div>
                             </div>
-                            <h4 style=" height: 40px"><a href="#">@item.diamondName</a></h4>
+                            <h4 style="height: 40px"><a href="#">@item.diamondName</a></h4>
                             <p class="arrival-product-price">$@item.diamondPrice</p>
                         </div>
                     </div>
                 }
             </div>
         </div>
-    </div><!--/.container-->
-</section><!--/.new-arrivals-->
+    </div>
+</section>
+
+
 <script src="~/Scripts/ProductJs/custom.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
 <script src="~/Scripts/ProductJs/bootstrap.min.js"></script>
