--- a/ProjectDiamondShop/Views/Shared/_LayoutPage1.cshtml
+++ b/ProjectDiamondShop/Views/Shared/_LayoutPage1.cshtml
@@ -1,5 +1,4 @@
 ﻿<!DOCTYPE html>
-
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
@@ -66,58 +65,55 @@
     </style>
 </head>
 <body>
-        <div class="navbar navbar-default navbar-fixed-top" role="navigation">
-            <div class="container ">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle " data-toggle="collapse" data-target=".navbar-collapse">
-                        <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-
-                    </button>
-
-                    <a class="navbar-brand text-center" href="@Url.Action("Index", "Home")">
-                        <span>
-                            <img src="/Image/HomePage/Logo/SafeIcon.jpg" alt="TheDiamondShop" height="40" />
-                        </span>
-                        <span>The Diamond Shop</span>
-                    </a>
-                </div>
-                <div class="navbar-collapse collapse">
-                    <ul class="nav navbar-nav navbar-right">
-                        <li><a href="@Url.Action("Index", "Home")">Home</a> </li>
-                        <li><a href="@Url.Action("About", "Home")">About</a> </li>
-                        <li><a href="@Url.Action("Contact", "Home")">Contact US</a> </li>
-                        <li><a href="@Url.Action("Index", "Diamonds")">Shop</a> </li>
-                        <li><a href="#">Blog</a> </li>
-                        @if (Session["IsAuthenticated"] != null && (bool)Session["IsAuthenticated"])
-                        {
-                            <li><a href="@Url.Action("EditProfile", "ViewProfile")">View Profile</a></li>
-                            <li><a href="@Url.Action("Logout", "Login")">Logout</a></li>
-                        }
-                        else
-                        {
-                            <li><a href="@Url.Action("Index", "SignUp")">Sign Up</a></li>
-                            <li><a href="@Url.Action("Index", "Login")">Login</a></li>
-                        }
-
-                    </ul>
-                </div>
+    <div class="navbar navbar-default navbar-fixed-top" role="navigation">
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand text-center" href="@Url.Action("Index", "Home")">
+                    <span>
+                        <img src="/Image/HomePage/Logo/SafeIcon.jpg" alt="TheDiamondShop" height="40" />
+                    </span>
+                    <span>The Diamond Shop</span>
+                </a>
+            </div>
+            <div class="navbar-collapse collapse">
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="@Url.Action("Index", "Home")">Home</a></li>
+                    <li><a href="@Url.Action("About", "Home")">About</a></li>
+                    <li><a href="@Url.Action("Contact", "Home")">Contact US</a></li>
+                    <li><a href="@Url.Action("Index", "Diamonds")">Shop</a></li>
+                    @if (Session["IsAuthenticated"] != null && (bool)Session["IsAuthenticated"])
+                    {
+                        <li><a href="@Url.Action("EditProfile", "ViewProfile")">View Profile</a></li>
+                        <li><a href="@Url.Action("Index", "Cart")">View Cart</a></li>
+                        <li><a href="@Url.Action("Logout", "Login")">Logout</a></li>
+                    }
+                    else
+                    {
+                        <li><a href="@Url.Action("Index", "SignUp")">Sign Up</a></li>
+                        <li><a href="@Url.Action("Index", "Login")">Login</a></li>
+                    }
+                </ul>
             </div>
         </div>
-        <hr />
-        @RenderBody()
-        <hr />
-        <footer>
-            <div class="container text-center">
-                <p><a href="#">Back To Top</a></p>
-                <p>&copy; 2024 The Diamond Shop. All rights reserved.</p>
-                <p>
-                    <a href="#">Terms of Service</a> | <a href="#">Privacy Policy</a> | <a href="#">Refund Policy</a>
-                </p>
-            </div>
-        </footer>
+    </div>
+    <hr />
+    @RenderBody()
+    <hr />
+    <footer>
+        <div class="container text-center">
+            <p><a href="#">Back To Top</a></p>
+            <p>&copy; 2024 The Diamond Shop. All rights reserved.</p>
+            <p>
+                <a href="#">Terms of Service</a> | <a href="#">Privacy Policy</a> | <a href="#">Refund Policy</a>
+            </p>
+        </div>
+    </footer>
     <div class="modal fade" id="loginSuccessModal" tabindex="-1" role="dialog" aria-labelledby="loginSuccessModalLabel" aria-hidden="true">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
@@ -137,17 +133,18 @@
         </div>
     </div>
     <script>
-        $(document).ready(function() {
+        $(document).ready(function () {
             var successMessage = '@ViewBag.SuccessMessage';
             var userName = '@ViewBag.UserName';
             if (successMessage) {
                 $('#userName').text(userName);
                 $('#loginSuccessModal').modal('show');
-                $('#modalOkButton').click(function() {
+                $('#modalOkButton').click(function () {
                     window.location.href = '@Url.Action("Index", "Home")';
                 });
             }
         });
     </script>
+    @RenderSection("scripts", required: false)
 </body>
 </html>
